# fmo-prep

./: .gitignore  README.md  STATUS.md  pixi.toml  pyproject.toml
examples/fragit_only/: config.yaml
examples/protein_ligand/: config.yaml  ligand.sdf  mdinfo
examples/protein_peptide/: config.yaml
examples/protein_peptide/outputs/: fmo_run.inp
examples/protein_peptide/outputs/fragit/: capped.inp  capped.inp.py  fragit.ini
gamess-inp-examples/: implicit_solvent.inp  protein-ligand_2-layer.inp  protein-ligand_mp2.inp
scripts/: activate.sh
src/fmo_prep/: __init__.py  cli.py  config.py
src/fmo_prep/analysis/: parser.py  plots.py  reports.py
src/fmo_prep/fragit/: postprocess.py  runner.py
src/fmo_prep/fragit/templates/: base.ini.j2
src/fmo_prep/io/: gamess.py  pdb.py  sdf.py
src/fmo_prep/prep/: common.py  protein_ligand.py  protein_peptide.py
tests/fixtures/: sample.inp
tests/test_analysis/: test_parser.py  test_plots.py
tests/test_fragit/: test_cli_fragit.py  test_postprocess.py  test_runner.py
